# evgen_inclusive_e

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_jx  _generate_lund_He3.sh  analysis_eAll.C  analysis_rad_norad_2D_plot.C  cmake_install.cmake  compare_eDIS_eAll.C  config.sh  evgen_inclusive_e.C  evgen_inclusive_e.cxx  fort.34  gen_d2n.lund  gen_d2n.root  gen_d2n_1.root  gen_sim.lund  readme  readme.md  setup  solid_inclusive_e  solid_inclusive_e.C  solid_inclusive_e_ye.C  submitjob_bggen_He3  test
include/: AmrounElasticFF.h  DipoleElasticFF.h  ELoss.h  ELoss_PVDIS.h  ElasticFormFactor.h  F1F221Wrapper.h  FileManager.h  GMp12ElasticFF.h  InputParameters.h  Kinematics.h  MyStyle.h  RadiativeCorrections.h  constants.h  eInclusiveCrossSection.h  fixed_target_xs.h  neutron_DIS.h  norad_XS.h  proton_DIS.h
input/: parameters.txt  parametersPVDIS_JPsi.txt  parametersPVDIS_LD2.txt  parametersPVDIS_LH2.txt  parametersSIDIS_3He.txt  parameters_JPsi.txt  parameters_d2n.txt  parameters_d2n_He3.txt  parameters_solid_JPsi_LH2.txt  parameters_solid_PVDIS_LD2.txt  parameters_solid_PVDIS_LH2.txt  parameters_solid_SIDIS_He3.txt  parameters_solid_SIDIS_NH3.txt
obj.Linux.x86_64/: F1F221Wrapper.d  FileManager.d  Kinematics.d  Main.d  RadiativeCorrections.d  christy_bosted_inelastic_QE.d  eInclusiveCrossSection.d  fixed_target_xs.d  neutron_DIS.d  proton_DIS.d
src/: AmrounElasticFF.C  DipoleElasticFF.C  ELoss.cxx  ELoss_PVDIS.cc  ElasticFormFactor.C  F1F221.f  F1F221Wrapper.C  F1F221Wrapper.cc  FileManager.C  FileManager.cxx  GMp12ElasticFF.C  Kinematics.C  Kinematics.cxx  Main.cc  Makefile  RadiativeCorrections.C  RadiativeCorrections.cxx  christy_bosted_inelastic_QE.C  eInclusiveCrossSection.C  fixed_target_xs.C  fixed_target_xs.cxx  neutron_DIS.C  pbmodel  proton_DIS.C
